--- a/index.css
+++ b/index.css
@@ -1,7 +1,32 @@
 body{
     margin: 0;
     padding: 0;
-    background-color: white;
+    background-color: var(--card-color);
+}
+
+:root{
+    --background-color:white;
+    --primary-color:#6943FF;
+    --secondry-color:whitesmoke;
+    --card-color:white;
+    --font-color:#5A537B;
+}
+
+.dark-theme{
+    --background-color:white;
+    --primary-color:#6943FF;
+    --secondry-color:#1F2937;
+    --card-color:#273549;
+    --font-color:#CCC1FF;
+}
+
+.ico{
+    text-align: right;
+}
+
+#icon{
+    width: 30px;
+    cursor: pointer;
 }
 
 .main{
@@ -11,22 +36,22 @@ body{
 
 .header{
     padding: 20px 20px 50px 20px;
-    background-color: #6943FF;
+    background-color: var(--primary-color);
 }
 
 .header > h1{
     font-size: 28px;
-    color: white;
+    color: var(--background-color);
 }
 
 #input-el{
-    width: 95px;
+    width: 150px;
     height: 70px;
     font-size: 50px;
     text-align: center;
-    background-color: #6943FF;
-    border-color: white;
-    color: white;
+    background-color: var(--primary-color);
+    border-color: var(--background-color);
+    color: var(--background-color);
     border-width: 1px;
     border-radius: 5px;
 }
@@ -43,14 +68,14 @@ body{
 
 .body{
     margin-top: -20px;
-    background-color: whitesmoke;
+    background-color: var(--secondry-color);
     padding: 20px 0 10px 0;
 }
 
 .card{
-    color: #5A537B;
+    color: var(--font-color);
     font-size: 10px;
     padding: 10px;
-    background-color: white;
+    background-color: var(--card-color);
     margin: 0 25px 25px 25px;
 }
